--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,10 @@ on:
       serviceName:
         required: true
         type: string
+    outputs:
+      imageName:
+        description: "Image name with Tag"
+        value: ${{ jobs.build.outputs.imageName }}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -18,7 +22,16 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
 
+    outputs:
+      imageName: ${{ steps.build-image.outputs.imageName }}
+
     steps:
 
-      - name: Run a one-line script
-        run: echo Hello, world! {{ input.serviceName }}
+    - name: Run a one-line script
+      run: echo Hello, world! {{ input.serviceName }}
+        
+    - name: Build Output
+      id: build-image
+      env:
+        IMAGE_TAG: ThisIsJobOutput
+      run: echo "::set-output name=imageName::$IMAGE_TAG"
