--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ on:
       imageName:
         description: "Image name with Tag"
         value: ${{ jobs.build.outputs.imageName }}
+    secrets:
+      PATTOKEN:
+        required: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
